--- a/style_new.css
+++ b/style_new.css
@@ -29,7 +29,12 @@ body {font-family: Arial;}
 .tab button.active {
   background-color: #ccc;
 }
-
+#current_date{
+  padding-top: 5px;
+  padding-left: 5px;
+  font-weight: bold;
+  font-style:italic;
+}
 /* Style the tab content */
 .tabcontent {
   
@@ -370,4 +375,18 @@ font-size: 18px;
   
     font-size: 14px;
     }
+}
+
+#current_dateshow{
+  text-align: start;
+  padding-top: 5px;
+  padding-left: 5px;
+  font-weight: bold;
+  font-style:italic;
+}
+
+@media only screen and (max-width: 800px) {
+  #current_dateshow{
+   font-size:13px ;
+  }
 }
