--- a/style_new.css
+++ b/style_new.css
@@ -158,6 +158,12 @@ form h3 {
   border-left: 3px solid #64FFDA;
 }
 
+
+.dates{
+width: 80px;
+}
+
+
 .form-date-group {
   display: flex;
   box-sizing: border-box;
